# perseus

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
perseus/: LICENSE  README.md  dragDropInstaller.py  install.mel  install.txt  versions.md
perseus/modules/perseus/plug-ins/win64/2019/: perseus.mll
perseus/modules/perseus/plug-ins/win64/2020/: perseus.mll
perseus/modules/perseus/plug-ins/win64/2022/: perseus.mll
perseus/modules/perseus/plug-ins/win64/2023/: perseus.mll
perseus/modules/perseus/plug-ins/win64/2024/: perseus.mll
perseus/modules/perseus/scripts/: AEprRopeRigTemplate.mel  AEprSquashTemplate.mel  userSetup.py
perseus/plug-ins/win64/2020/: perseus.mll
perseus/plug-ins/win64/2022/: perseus.mll
perseus/plug-ins/win64/2023/: perseus.mll
perseus/plug-ins/win64/2024/: perseus.mll
perseus/sample/: ropeRig.mb
perseus/source/: computeEulerRotationFromCurves.cpp  computeEulerRotationFromCurves.h  main.cpp  prMirrorSupportJntsCmd.cpp  prMirrorSupportJntsCmd.h  prPairBlend.cpp  prPairBlend.h  prPairBlendCmd.cpp  prPairBlendCmd.h  prRopeRig.cpp  prRopeRig.h  prRopeRigCmd.cpp  prRopeRigCmd.h  prSimplePairBlend.cpp  prSimplePairBlend.h  prSimplePairBlendCmd.cpp  prSimplePairBlendCmd.h  prSimpleSupportJntsCmd.cpp  prSimpleSupportJntsCmd.h  prSquash.cpp  prSquash.h  prSquashCmd.cpp  prSquashCmd.h  prSupportJntsCmd.cpp  prSupportJntsCmd.h  prVectorAddInfluenceCmd.cpp  prVectorAddInfluenceCmd.h  prVectorConstraint.cpp  prVectorConstraint.h  prVectorConstraintCmd.cpp  prVectorConstraintCmd.h  prVectorJntsOnCrvCmd.cpp  prVectorJntsOnCrvCmd.h
(+1 files in other folders)
